lesson1/task5-6-service-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task5-service
spec:
  ports:
    - name: http-service-port
      port: 80
      protocol: TCP
      targetPort: http-port-id
  selector:
    app: podinfo-app
