lesson1/task5-6-service-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing-ext
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: podinfo.student1-2-6.kube.devops-teta.ru
      http:
        paths:
          - backend:
              service:
                name: task5-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
